trying to update change request entity